frame/support/test/tests/construct_runtime_ui/conflicting_index.stderr
error: Pallet indices are conflicting: Both pallets System and Pallet1 are at index 0
 --> $DIR/conflicting_index.rs:9:3
  |
9 |         System: system::{},
  |         ^^^^^^

error: Pallet indices are conflicting: Both pallets System and Pallet1 are at index 0
  --> $DIR/conflicting_index.rs:10:3
   |
10 |         Pallet1: pallet1::{} = 0,
   |         ^^^^^^^
